Bug 2032929 - Fix overflow-wrap issues for Settings > Applications card r=desktop-theme-reviewers,tgiles
Differential Revision: https://phabricator.services.mozilla.com/D295045

UltraBlame original commit: 47a20bbca3f8d7dd634a6bd284af49671077fe48

--- a/browser/themes/shared/preferences/preferences.css
+++ b/browser/themes/shared/preferences/preferences.css
@@ -63,10 +63,10 @@
 }
 
 #categories {
-  min-width: calc(var(--size-sidebar) - 42px);
+  width: calc(var(--size-sidebar) - 42px);
 
   @media (max-width: 950px) {
-    min-width: auto;
+    width: auto;
   }
 }
 
@@ -94,7 +94,7 @@
   width: 100%;
 }
 
-@media (max-width: 52rem) {
+@media (max-width: 950px) {
   #search-container:has(#policies-container-content:not([hidden])) {
     padding-top: var(--space-small);
   }
@@ -109,10 +109,9 @@
      padding-top already set in common-shared.css. */
   margin-top: 32px;
   padding-top: 0;
-  padding-inline-end: 42px;
   scroll-padding-top: calc(40px + var(--search-container-padding) + var(--search-container-margin) + 40px);
 
-  @media (max-width: 830px) {
+  @media (max-width: 950px) {
     padding-inline: var(--space-medium);
   }
 }
@@ -401,6 +400,13 @@ setting-group:has(> moz-card).spotlight {
   }
 }
 /** SRD applications section END **/
+
+/* Override overflow-wrap: anywhere from moz-card
+ TODO: Eventually we should update to make this
+ section more responsive to screen width */
+moz-fieldset#applicationsGroup {
+  overflow-wrap: normal;
+}
 
 #handlersView {
   height: 25em;
